fix(project-export): CO-553 项目列表导出表格与系统显示一致
根因：导出接口 GET /api/projects/export 用原始实体（Project/ProjectInitiationDetails/Tender）
拼装，未与列表接口 GET /api/projects 同源，导致：
1. 表头不全：缺 5 列（来源平台/客户营收/优先级/总部所在地/项目阶段）
2. 表头名不符前端：业主单位→招标主体、入围家数→计划入围供应商数量、投标状态→项目状态
3. 多 2 列前端无对应：客户等级、中标状态
4. 5 个枚举字段输出英文：projectType/customerType/priority/stage/sourceModule
   （PR !1862 已修复 bidStatus，本次补齐其他 5 个）
5. 数据源不同源：导出取 det.bidStatus 原始值，列表用 ProjectQueryService
   计算后的 bidStatus，可能不一致

修复：
- 数据源复用 ProjectQueryService.getAllProjects()，与列表接口完全同源
- 列定义对齐前端 List.vue 表格 19 列（移除前端无对应列）
- 6 个枚举字段全部中文映射（bidStatus/projectType/customerType/priority/
  stage/sourceModule），与前端 projectListFormatters.js / project-utils.js 同源
- 未知枚举值 fallback 显示原值（与前端 map[v] || v 一致），避免丢失数据
- revenue 格式化为 2 位小数（与前端 toFixed(2) 一致）
- 从 project-access-guard-baseline.txt 移除 ProjectExportService 条目
  （不再直接调用 ProjectAccessScopeService，权限由 ProjectQueryService 内部处理）

测试：
- ProjectExportServiceTest 6 个测试全通过：19 列表头/6 枚举中文/辅助人员/
  未知值 fallback/过滤/空列表
- ProjectAccessGuardCoverageTest 通过（baseline 已同步更新）
- 回归 21 个测试通过（ProjectControllerAuthorizationTest 等）
- Checkstyle + PMD 通过

PR !1862 关系：PR !1862 已合并到 main，仅修复 bidStatus 中文化 + 辅助人员列。
本次在其基础上补齐剩余 5 列 + 5 个枚举中文化 + 表头对齐 + 数据源同源，
是 CO-553 的完整修复。